--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <p class="counter">You have entered <strong id="keywordsCounter">0</strong> keywords and <strong id="volumesCounter">0</strong> volumes of total volume <span id="volumeSum">0</span>.</p>
     <div id="buttons-container">
-      <button id="submit">Submit</button>
+      <button id="submit">Generate tokens</button>
       <button id="reset">Reset</button>
     </div>
     <h2>View and copy results</h2>
