--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <button id="reset">Reset</button>
     </div>
     <h2>View and copy results</h2>
-    <button id="copy">Copy results</button>
+    <div id="buttons-container">
+      <button id="copy">Copy results</button>
+      <button id="export-csv">Export to CSV</button>
+    </div>
     <div id="results-body">
       <table id="results">
         <thead>
