--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -10,7 +11,7 @@
   <body>
     <h1>SEO Keyword Tokenizer</h1>
     <p>This tool extracts single words (tokens) from your keyword list and gives you a table of tokens with their volumes (minus English stopwords). All you need is a list of keywords and their volumes.</p>
-    <p><strong>Why is it useful?</strong> It can help you with on-page optimization. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
+    <p><strong>Why is it useful?</strong> It can help you with on-page optimisation. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
     <h2>Enter keywords and volumes</h2>
     <div id="input-container">
       <textarea placeholder="Keywords (1 per line)" id="keywords"></textarea>
@@ -21,7 +22,7 @@
       <button id="submit">Generate tokens</button>
       <button id="reset">Reset</button>
     </div>
-    <h2>View and copy results</h2>
+    <h2>View all tokens</h2>
     <div id="buttons-container">
       <button id="copy">Copy results</button>
       <button id="export-csv">Export to CSV</button>
