--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <h2>View all tokens</h2>
     <div id="buttons-container">
-      <button id="copy">Copy results</button>
+      <button id="copy">Copy table</button>
       <button id="export-csv">Export to CSV</button>
     </div>
     <div id="results-body">
