--- a/index.html
+++ b/index.html
@@ -39,6 +39,6 @@
       </table>
       <script src="script.js"></script>
     </div>
-    <p id="footer">Author: <a href="https://www.linkedin.com/in/jiri-lacina/">Jiří Lacina</a></br><a href="mailto:lacina@proton.me">lacina@proton.me</a>
+    <p id="footer">Author: <a target="_blank" href="https://www.linkedin.com/in/jiri-lacina/">Jiří Lacina</a></br><a href="mailto:lacina@proton.me">lacina@proton.me</a>
   </body>  
 </html>
