--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="style.css">
     <title>Keyword Tokenizer for SEO | Extract Tokens From Keywords</title>
     <meta name="description" content="Working on a new SEO article or optimizing a landing page? Use this free token extraction tool to better target your most important keywords.">
-  	<meta name="author" content="Jiří Lacina">
+    <meta name="author" content="Jiří Lacina">
+    <!-- Pixel Code for https://app.tinyanalytics.io/ -->
+    <script defer src="https://app.tinyanalytics.io/pixel/XnNmKoBusFT4C2KV"></script>
+    <!-- END Pixel Code -->
   </head>
   <body>
     <h1>SEO Keyword Tokenizer</h1>
