--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <script defer src="https://app.tinyanalytics.io/pixel/XnNmKoBusFT4C2KV"></script>
     <!-- END Pixel Code -->
   </head>
-  <body>
+    <body>
     <h1>SEO Keyword Tokenizer</h1>
     <p>This tool extracts single words (tokens) from your keyword list and gives you a table of tokens with their volumes (minus English stopwords). All you need is a list of keywords and their volumes.</p>
-    <p><strong>Why is it useful?</strong> It can help you with on-page optimization. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
     <h2>Enter keywords and volumes</h2>
     <div id="input-container">
       <textarea placeholder="Keywords (1 per line)" id="keywords"></textarea>
       <textarea placeholder="Volumes (1 per line)" id="volumes"></textarea>
     </div>
-    <p class="counter">You have entered <strong id="keywordsCounter">0</strong> keywords and <strong id="volumesCounter">0</strong> volumes of total volume <span id="volumeSum">0</span>.</p>
+    <p class="counter">You have entered <strong id="keywordsCounter">0</strong> keywords and <strong id="volumesCounter">0</strong> volumes.</br />Total volume: <span id="volumeSum">0</span></p>
     <div>
       <button id="submit">Generate tokens</button>
       <button id="reset">Reset</button>
     </div>
-    <h2>See all tokens and their volumes below</h2>
+    <p id="hiddenPara">Successful, scroll down to see the output</p>
+    <h2>See all tokens and their volumes</h2>
     <div id="hiddenDiv">
       <button class="exportBtn" id="copy">Copy table</button>
       <button class="exportBtn" id="export-csv">Export to CSV</button>
@@ -42,6 +42,15 @@
       </table>
       <script src="script.js"></script>
     </div>
-    <p id="footer">Author: <a target="_blank" href="https://www.linkedin.com/in/jiri-lacina/">Jiří Lacina</a></br><a href="mailto:lacina@proton.me">lacina@proton.me</a>
+    <div>
+      <h2>Frequently asked questions</h2>
+      <h3 class="FAQ">How is this tool useful?</h3>
+      <p class="FAQ">This tool can help you with on-page optimization. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
+      <h3 class="FAQ">Where can I get volumes of my keywords?</h3>
+      <p class="FAQ">Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of your queries.</p>
+      <h3 class="FAQ">Can I find out how often individual words appear in the data set?</h3>
+      <p class="FAQ">This tool does not currently support this feature, although it may be implemented in the future. In the meantime, you can use <a href="https://www.prokopsw.cz/app/n-grams/">this N-grams tool</a>.</p>
+    </div>
+    <p id="footer">Author: <a target="_blank" href="https://www.linkedin.com/in/jiri-lacina/">Jiří Lacina</a>, 2023</br><a href="mailto:lacina@proton.me">lacina@proton.me</a>
   </body>  
 </html>
