--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </thead>
         <tbody></tbody>
       </table>
-      <script src="script.js"></script>
+      <script defer src="script.js"></script>
     </div>
     <div>
       <h2>Frequently asked questions</h2>
