--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h1>SEO Keyword Tokenizer</h1>
-    <p>This tool extracts single words (tokens) from your keyword list and gives you a table of tokens with their volumes (minus English stopwords). All you need is a list of keywords and their volumes.</p>
+    <p>This tool extracts single words (tokens) from your keyword list and gives you a table of tokens with their volumes (minus English stopwords). All you need is a list of keywords and their volumes from your favorite keyword tool.</p>
     <h2>Enter keywords and volumes</h2>
     <div id="input-container">
       <textarea placeholder="Keywords (1 per line)" id="keywords"></textarea>
@@ -42,12 +42,13 @@
       </table>
       <script defer src="script.js"></script>
     </div>
+    <hr />
     <div>
       <h2>Frequently asked questions</h2>
       <h3 class="FAQ">How is Keyword Tokenizer useful?</h3>
       <p class="FAQ">This tool can help you with on-page optimization. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
       <h3 class="FAQ">Where can I get volumes of my keywords?</h3>
-      <p class="FAQ">Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of your queries.</p>
+      <p class="FAQ">Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of queries.</p>
       <h3 class="FAQ">Can I find out how often individual words appear in the data set?</h3>
       <p class="FAQ">Keyword Tokenizer does not currently support this feature, although it may be implemented in the future. In the meantime, you can use an <a href="https://www.prokopsw.cz/app/n-grams/" target="_blank">N-grams tool</a>.</p>
     </div>
@@ -68,7 +69,7 @@
           "name": "Where can I get volumes of my keywords?",
           "acceptedAnswer": {
             "@type": "Answer",
-            "text": "Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of your queries."
+            "text": "Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of queries."
           }
         },{
           "@type": "Question",
