--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Keyword Tokenizer for SEO | Extract Tokens From Keywords</title>
+    <title>Keyword Tokenizer for SEO: Extract Tokens From Keywords</title>
     <meta name="description" content="Working on a new SEO article or optimizing a landing page? Use this free token extraction tool to better target your most important keywords.">
   	<meta name="author" content="Jiří Lacina">
     <!-- Pixel Code for https://app.tinyanalytics.io/ -->
