--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <textarea placeholder="Keywords (1 per line)" id="keywords"></textarea>
       <textarea placeholder="Volumes (1 per line)" id="volumes"></textarea>
     </div>
-    <p class="counter">You have entered <strong id="keywordsCounter">0</strong> keywords and <strong id="volumesCounter">0</strong> volumes.</br />Total volume: <span id="volumeSum">0</span></p>
+    <p class="counter">You have entered <span id="keywordsCounter">0</span> keywords and <span id="volumesCounter">0</span> volumes.</br />Total volume: <strong id="volumeSum">0</strong></p>
     <div>
       <button id="submit">Generate tokens</button>
       <button id="reset">Reset</button>
