--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <h3 class="FAQ">How is Keyword Tokenizer useful?</h3>
       <p class="FAQ">This tool can help you with on-page optimization. You will know which specific words are the most important to include in the title, headings, and the rest of the content based on the keyword research.</p>
       <h3 class="FAQ">Where can I get volumes of my keywords?</h3>
-      <p class="FAQ">Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console, which shows impressions of queries.</p>
+      <p class="FAQ">Popular keyword research tools such as Ahrefs, Semrush or Marketing Miner can help you identify relevant keywords and their average monthly search volume in a chosen country (or globally). Alternatively, you can use Google Search Console or Bing Webmaster Tools.</p>
       <h3 class="FAQ">Can I find out how often individual words appear in the data set?</h3>
       <p class="FAQ">Keyword Tokenizer does not currently support this feature, although it may be implemented in the future. In the meantime, you can use an <a href="https://www.prokopsw.cz/app/n-grams/" target="_blank">N-grams tool</a>.</p>
     </div>
